# agentic-rag

./: .env.example  .gitignore  README.md  comprehensive_rag_system_prompt.md  debug_multi_query.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_llm.py  test_llm_json.py
app/: __init__.py  agent.py  agent_utils.py  auth.py  cache.py  config.py  context.py  health.py  ingestion.py  main.py  multi_query.py  observability.py  retrieval.py  session.py  test.py
db/: bm25_index.json
db/chroma/: chroma.sqlite3
frontend/: index.html
scripts/: evaluate.py
