[project]
name = "agentic-scalable-rag"
version = "0.1.0"
description = "Production-grade agentic RAG system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "openai>=1.50.0",
    "llama-index>=0.11.0",
    "llama-index-llms-openai-like>=0.2.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "redis[hiredis]>=5.0.0",
    "langfuse>=2.40.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "python-multipart>=0.0.26",
    "llama-index-embeddings-huggingface>=0.7.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.1.0",
    "datasets>=2.0.0"
]
